@@ -1,3 +1,5 @@
+* Wed Mar 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Add GRSTx509MakeDelegationID() to grst_x509.c
 * Fri Mar 17 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
 - Associate ldconfig %post in spec with -shared RPM
 * Thu Mar 16 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
